[package]
name = "race-example-science-game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

#[lib]
#crate-type = ["cdylib"]
#
[dependencies]
race-core.workspace = true
race-api.workspace = true
race-proc-macro.workspace = true
borsh.workspace = true
arrayref.workspace = true
openssl-sys = "0.9.102"
serde_json = "1.0.85"
serde = "1.0.144"
rsa = "0.5"
rand = "0.8"

[dev-dependencies]
race-test.workspace = true
anyhow.workspace = true
serde = { version = "1.0", features = ["derive"] }